// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createDebugMdFrontMatter > should generate correct front matter 1`] = `
"---
model: llama3.1:8b
eval_count: 100
prompt_eval_count: 200
total_duration: 2m 3s 400ms
eval_duration: 56s 700ms
load_duration: 1m 29s
prompt_eval_duration: 12s 300ms
created_at: 2024-01-01T00:00:00.000Z
---

"
`;

exports[`createDebugMdFrontMatter > should handle zero durations correctly 1`] = `
"---
model: llama3.1:8b
eval_count: 100
prompt_eval_count: 200
total_duration: 0s
eval_duration: 0s
load_duration: 0s
prompt_eval_duration: 0s
created_at: 2024-01-01T00:00:00.000Z
---

"
`;
